Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -554,6 +554,9 @@
     </footer>
 
   </div>
+<a class="btn-ghost" href="./game.html" style="text-decoration:none; display:inline-flex; align-items:center; justify-content:center;">
+  外送遊戲
+</a>
 
   <script>
     (function(){
@@ -618,3 +621,4 @@
   </script>
 </body>
 </html>
+
